# extractor_project

./: .gitignore  main.py  pyproject.toml  requirements.txt  seminar 22.py
src/: benchmarl.py  employee.py  services.py
tests/: employee_test.py
