[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = "[]"
authors = ["Darya Balba <dpbalba@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
